--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
 html {
   line-height: 1.5;
   font-size: 20;
-  font-family: ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"
+  font-family: 'Sitka Text', Cambria, serif;
 }
 
 body {
@@ -36,14 +36,70 @@ body {
   height: 1.4em;
   text-align: center;
   margin-top: 30%;
-  color: white;
+  color: #F8F3E6;
+  text-shadow: #F8F3E6 0 0 12px;
   background-color: rgba(0, 0, 0, 0.6);
 }
 
 .attribution,
 .attribution a {
-  color: white;
+  color: #F8F3E6;
   text-align: center;
   margin-top: 90%;
   text-shadow: black 0 0 3px;
+}
+
+.right-container {
+  flex-basis: 60%;
+  display: flex;
+  flex-direction: column;
+  background-color: #F7DFD4;
+}
+
+.right-container>h2 {
+  margin-top: 50px;
+  max-width: 60ch;
+}
+
+.right-container h2,
+.right-container .form-row {
+  padding: 0 40px 0 40px;
+}
+
+.form-input-container {
+  background-color: #fff6f3;
+  padding: 20px 0 20px 0;
+  box-shadow: 0px 3px 10px 5px rgba(0, 0, 0, 0.1);
+}
+
+.form-row {
+  display: flex;
+  gap: 100px;
+}
+
+.form-row .form-input {
+  display: flex;
+  flex-direction: column;
+}
+
+.form-input input {
+  appearance: none;
+  margin-bottom: 20px;
+  font-family: inherit;
+  font-size: inherit;
+  height: 2em;
+  width: 30ch;
+  border: 1px solid #E2B091;
+  border-radius: 5px;
+  background-color: #fff6f3;
+}
+
+.form-input input:focus {
+  outline: none;
+  border: 1px solid #874E4C;
+  box-shadow: 2px 2px 3px 0px rgba(0, 0, 0, 0.2);
+}
+
+button {
+  background-color: #874E4C;
 }
