--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
+:root {
+  --macaron: #F7DFD4;
+  --blush: #EABCAC;
+  --nude: #E2B091;
+  --chocolat: #874E4C;
+  --cafe-noir: #32485C;
+}
+
 *,
 *::before,
 *::after {
@@ -35,6 +43,9 @@ body {
 }
 
 .banner {
+  display: flex;
+  align-items: baseline;
+  justify-content: space-around;
   font-family: abhayalibre;
   font-size: 140px;
   height: 1.4em;
@@ -44,6 +55,10 @@ body {
   color: #F8F3E6;
   text-shadow: #f8f3e6da 0 0 12px;
   background-color: rgba(0, 0, 0, 0.6);
+}
+
+.banner svg {
+  filter: drop-shadow(0px 0px 6px #f8f3e6da);
 }
 
 .attribution,
@@ -72,6 +87,12 @@ body {
   padding: 0 40px 0 80px;
 }
 
+.right-container a {
+  text-decoration: none;
+  color: #7c4846;
+  font-style: italic;
+}
+
 .form-input-container {
   background-color: #fff6f3;
   padding: 20px 0 20px 0;
@@ -81,6 +102,10 @@ body {
 .form-row {
   display: flex;
   gap: 100px;
+}
+
+.form-header {
+  margin-bottom: 15px;
 }
 
 .form-row .form-input {
@@ -94,7 +119,7 @@ body {
   font-family: inherit;
   font-size: inherit;
   height: 2em;
-  width: 30ch;
+  max-width: 30ch;
   border: 1px solid #E2B091;
   border-radius: 5px;
   background-color: #fff6f3;
@@ -111,7 +136,7 @@ body {
 }
 
 button {
-  margin-top: 30px;
+  margin: 30px 0 15px 0;
   border: none;
   border-radius: 7px;
   background-color: #874E4C;
@@ -130,6 +155,20 @@ button:hover {
 button:active {
   background-color: #6b3e3c;
 }
+
+.form-header {
+  position: relative;
+}
+
+/* .form-header::after {
+  position: absolute;
+  top: 5px;
+  left: 640px;
+  font-size: 16px;
+  font-style: italic;
+  color: #cf3b33;
+  content: "All forms required.";
+} */
 
 @media only screen and (max-width: 1200px) {
   .form-row {
